[package]
name = "pons"
version = "0.10.0"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2024"
rust-version = "1.93"
description = "Rust package for contract bridge"
repository = "https://github.com/jdh8/pons"
homepage = "https://github.com/jdh8/pons"
documentation = "https://docs.rs/pons"
readme = "README.md"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge"]
# Dev-only trees kept out of the published tarball: the off-crate distillation
# trainer (its own workspace) and the vendored BBA/EPBot reference engine (the
# `vendor/bba` git submodule, ~50 MB, used only by the benchmark examples).
exclude = ["trainer", "vendor"]

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde", "contract-bridge/serde", "ddss/serde", "bitflags/serde"]
# Distilled neural floor (AI-bidder M1.2): embeds the trained weights and a
# hand-rolled forward pass. Off by default so the standard build stays lean and
# dependency-free — the weights are `include_bytes!`d, no ML runtime is pulled in.
neural-floor = []
# Gated live double-dummy search bidder (AI-bidder M2.3): at each non-forced
# decision it shortlists the net's top calls, scores them by cardplay EV over
# sampled layouts (the M2.2 evaluator), and bids the best. Slow and off by
# default; implies `neural-floor` for the prior net and the forced-rails shell.
search = ["neural-floor"]

[dependencies]
bitflags = "2"
contract-bridge = { version = "0.1.3", features = ["rand"] }
ddss = "0.1.3"
# Already compiled transitively via contract-bridge's `rand` feature; named here
# directly so the constrained sampler (AI-bidder M2.1) can take the caller's RNG.
rand = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# AI-bidder Side-track S: the BBA reference examples dlopen EPBot's native lib
# (the `vendor/bba` git submodule) to drive it as a reference bidder. Dev-only —
# never part of the published default build.
libloading = "0.8"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
nalgebra = "0.35"
proptest = { version = "1", default-features = false, features = ["std"] }
rayon = "1"
serde_json = "1"

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "trie"
harness = false

[[bench]]
name = "par"
harness = false

# The neural-floor A/B example (AI-bidder M1.4) imports `neural-floor`-gated
# items, so it builds only with that feature — otherwise `cargo build --examples`
# would fail to resolve `american_neural`. Every other example is still
# auto-discovered.
[[example]]
name = "ab-neural-floor"
path = "examples/ab-neural-floor/main.rs"
required-features = ["neural-floor"]

# The live-search A/B example (AI-bidder M2.3) imports `search`-gated items
# (`american_search`), so it builds only with that feature.
[[example]]
name = "ab-search-floor"
path = "examples/ab-search-floor/main.rs"
required-features = ["search"]

# The leaf-pricing A/B example (AI-bidder M7.0) measures `american_search_book`
# (DD on authored leaves too) against `american_search` (DD off-book only), so it
# builds only with the `search` feature.
[[example]]
name = "ab-search-book"
path = "examples/ab-search-book/main.rs"
required-features = ["search"]

# The search-target dump (AI-bidder M3.1) bids out boards with the live-search
# floor (`american_search_with`) to record distillation targets, so it too
# builds only with the `search` feature.
[[example]]
name = "dump-search"
path = "examples/dump-search/main.rs"
required-features = ["search"]

# The constructive-only floor A/B/C asks whether the search floors should also
# own the unbooked constructive nodes; it uses `SearchFloor` and
# `american_constructive_floor`, so it builds only with the `search` feature.
[[example]]
name = "ab-constructive"
path = "examples/ab-constructive/main.rs"
required-features = ["search"]

# The grand-slam probe (AI-bidder M3.1 diagnostic) replays the live-search
# bidder (`search_floor::SearchFloor`, `american_search_with`), so it builds
# only with the `search` feature.
[[example]]
name = "probe-grand"
path = "examples/probe-grand/main.rs"
required-features = ["search"]

# The constraint-extraction probe (AI-bidder M4) samples actor hands and runs
# the distilled net (`american_neural_search`/`_v2`/`_neural`) to summarise each
# call's hand conditions, so it builds only with the `search` feature.
[[example]]
name = "probe-extract-constraints"
path = "examples/probe-extract-constraints/main.rs"
required-features = ["search"]

# The BBA reference anchor (AI-bidder Side-track S.1), split into a single-thread
# EPBot *generator* and a parallel-DD *scorer* that exchange a JSON board `Dump`.
# Both (de)serialize it via serde, so they build only with the `serde` feature.
[[example]]
name = "bba-gen"
path = "examples/bba-gen/main.rs"
required-features = ["serde"]

[[example]]
name = "bba-score"
path = "examples/bba-score/main.rs"
required-features = ["serde"]

[profile.dev.package."*"]
opt-level = 2
