[package]
name = "pons"
version = "0.11.0-dev"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2024"
rust-version = "1.93"
description = "Rust package for contract bridge"
repository = "https://github.com/jdh8/pons"
homepage = "https://github.com/jdh8/pons"
documentation = "https://docs.rs/pons"
readme = "README.md"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge"]
# Dev-only trees kept out of the published tarball: the off-crate distillation
# trainer (its own workspace), the vendored BBA/EPBot reference engine (the
# `vendor/bba` git submodule, ~50 MB, used only by the benchmark examples),
# and the browser front end (its own workspace, deployed via GitHub Pages).
# Also the A/B campaign tooling that has no downstream value: the shell-script
# harness (`scripts`), the tracked leftover result files (`ab-results`, mostly
# gitignored but a pre-ignore subset is still tracked), and the Claude skill
# docs (`.claude`, `.agents`).
exclude = ["trainer", "vendor", "web", "ab-results", "scripts", ".claude", ".agents"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["dd"]
# Native double-dummy solver (ddss wraps C++ DDS). Default-on; disable for
# targets without a C++ toolchain — the pure-Rust bidding stack (used by the
# `web/` wasm crate) builds with `default-features = false`.
dd = ["dep:ddss"]
serde = ["dep:serde", "contract-bridge/serde", "ddss?/serde", "bitflags/serde"]

[dependencies]
bitflags = "2.2.1"
contract-bridge = { version = "0.1.4", features = ["rand"] }
ddss = { version = "0.1.3", optional = true }
# Already compiled transitively via contract-bridge's `rand` feature; named here
# directly so the constrained sampler (AI-bidder M2.1) can take the caller's RNG.
nalgebra = { version = "0.35", default-features = false, features = ["std"] }
rand = "0.10"
serde = { version = "1.0.225", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
# AI-bidder Side-track S: the BBA reference examples dlopen EPBot's native lib
# (the `vendor/bba` git submodule) to drive it as a reference bidder. Dev-only —
# never part of the published default build.
libloading = "0.9"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
proptest = { version = "1", default-features = false, features = ["std"] }
rayon = "1"
serde_json = "1.0.100"

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "trie"
harness = false

[[bench]]
name = "par"
harness = false

# The BBA reference anchor (AI-bidder Side-track S.1), split into a single-thread
# EPBot *generator* and a parallel-DD *scorer* that exchange a JSON board `Dump`.
# Both (de)serialize it via serde, so they build only with the `serde` feature.
[[example]]
name = "bba-gen"
path = "examples/bba-gen/main.rs"
required-features = ["serde"]
# Runs the shared `common::oracle` unit tests (the `.bbsa` card parser).
test = true

# Phase B of the BEN book extraction: per-prefix hidden-hand inference rows
# for BEN's Info net to annotate (scripts/ben-info-dump.py) and compare.
[[example]]
name = "probe-ben-info"
path = "examples/probe-ben-info/main.rs"
required-features = ["serde"]

# The BEN gap campaign's generator: same Dump, BEN over REST at the far seats
# (docs/ben-gen-design.md); --calibrate-epbot seats vendored EPBot at ours.
[[example]]
name = "ben-gen"
path = "examples/ben-gen/main.rs"
required-features = ["serde"]

[[example]]
name = "bba-score"
path = "examples/bba-score/main.rs"
required-features = ["serde"]

[[example]]
name = "ab-dump-diff"
path = "examples/ab-dump-diff/main.rs"
required-features = ["serde"]

[[example]]
name = "ab-dump-sd"
path = "examples/ab-dump-sd/main.rs"
required-features = ["serde"]

[[example]]
name = "ab-dump-bucket"
path = "examples/ab-dump-bucket/main.rs"
required-features = ["serde"]

[[example]]
name = "ab-dump-gladiator-bucket"
path = "examples/ab-dump-gladiator-bucket/main.rs"
required-features = ["serde"]

[[example]]
name = "ab-dump-cachalot"
path = "examples/ab-dump-cachalot/main.rs"
required-features = ["serde"]

# The anchor decomposition (gap campaign, docs/bba-gap-campaign.md): replays a
# bba-gen dump through the live books to attribute every divergent board
# (phase × provenance × family × direction) and rank the IMP-loss buckets.
[[example]]
name = "bba-decompose"
path = "examples/bba-decompose/main.rs"
required-features = ["serde"]

[[example]]
name = "probe-bba-bilans"
path = "examples/probe-bba-bilans/main.rs"
required-features = ["serde"]

# Prices the learned trick evaluator against the sample-and-solve truth it
# amortizes (bilans session C); needs the net it is measuring.
[[example]]
name = "eval-evaluator"
path = "examples/eval-evaluator/main.rs"
required-features = ["dd"]

[profile.dev.package."*"]
opt-level = 2
