[package]
name = "pons-trainer"
version = "0.1.0"
edition = "2024"
publish = false
description = "Off-crate trainer for the pons AI instinct bidder (M1 distillation). Not part of the pons build."

# Empty `[workspace]` table: makes this crate its own workspace root, so the
# parent `pons` package never adopts it. `cargo build`/`cargo test` at the pons
# repo root never compile candle — the trainer is built and run only from inside
# `trainer/`. The trainer intentionally does NOT depend on `pons`: it mirrors the
# feature/softmax constants below and asserts them against the data sidecar, so
# it stays a lean candle build (no DDS/contract-bridge compile just to train).
[workspace]

# Optional because the trainer must still build on a box without a CUDA
# toolkit; `--features cuda` needs nvcc ≥ 11.8 for the 4090's sm_89, so point
# PATH at /usr/local/cuda-12.8 rather than the /usr/bin/nvcc 11.5.
[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
candle-core = "0.11"
candle-nn = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
